# ado-cli

./: .ado.toml.example  .env.example  .gitignore  Cargo.toml  README.md  SKILL.md
.github/workflows/: release.yml  test.yml
src/: client.rs  config.rs  main.rs
src/commands/: comment.rs  item.rs  iterations.rs  link.rs  mod.rs  sprint.rs
